--- a/talks_and_papers/qp_paper/deleted_mats.tex
+++ b/talks_and_papers/qp_paper/deleted_mats.tex
@@ -178,3 +178,19 @@ Of note in the findings is that female coreferential names are consistently more
 Supplementary materials, including details related to the norming study and unreported processing studies, can be found at \url{https://branpap.com/qp1-supplementary-materials}.
 
 \nocite{labov1963social}
+
+
+
+	Participants were paid at a flat rate of \$1.75, with a mean completion time of 5.51 minutes (before exclusions). This resulted in an average rate of \$20.73/hr. Participants received payment regardless of their inclusion in the final analysis.
+	
+		Participants were paid at a rate of \$15-\$16 an hour for their participation in the study, regardless of whether or not their data was used in the final analysis.
+	
+
+Critical items took the form ``[NAME] is a [blank] from [STATE]", where the blank was one of 14 social roles which shows a ternary distinction in its gender marking (e.g. \textit{congressman}, \textit{congresswoman}, \textit{congressperson}). An additional six critical items making only a binary distinction (e.g. \textit{villain} vs. \textit{villainess}) were also tested. \par 
+
+	\section{Supplementary Materials}
+Supplementary materials, including details related to the norming study and the unreported processing study, can be found at \url{http://www.branpap.com/research.html}.
+
+	Participants who failed to accurately respond to at least 85\% of the attention check questions were excluded from analysis. 19 participants were excluded on this basis, for a final total of 279 participants whose data were included in the analysis (6.3\% exclusion rate). \par 
+	
+25 participants' data were excluded for failing to reach the 80\% threshold on attention check questions, for a total of 276 participants whose data was analyzed (8.3\% exclusion rate).\par
