--- a/talks_and_papers/qp_paper/qp1.bib
+++ b/talks_and_papers/qp_paper/qp1.bib
@@ -359,3 +359,83 @@
 	year={2011},
 	publisher={De Gruyter Mouton}
 }
+
+@misc{coca,
+	title={The Corpus of Contemporary American English (COCA)},
+	author={Davies, Mark},
+	year={2008-},
+	url={https://www.english-corpora.org/coca/}
+}
+
+@article{doherty2017gender,
+	title={How gender-expectancy affects the processing of “them”},
+	author={Doherty, Alice and Conklin, Kathy},
+	journal={Quarterly Journal of Experimental Psychology},
+	volume={70},
+	number={4},
+	pages={718--735},
+	year={2017},
+	publisher={SAGE Publications Sage UK: London, England}
+}
+
+@inproceedings{ackerman,
+	title={Processing singular \textit{they} with generic and specific antecedents},
+	author={Ackerman, Lauren},
+	booktitle={Architectures and Mechanisms of Language Processing},
+	year={2018}
+}
+
+@article{caliskan2017semantics,
+	title={Semantics derived automatically from language corpora contain human-like biases},
+	author={Caliskan, Aylin and Bryson, Joanna J and Narayanan, Arvind},
+	journal={Science},
+	volume={356},
+	number={6334},
+	pages={183--186},
+	year={2017},
+	publisher={American Association for the Advancement of Science}
+}
+
+@article{eckert2008variation,
+	title={Variation and the indexical field 1},
+	author={Eckert, Penelope},
+	journal={Journal of sociolinguistics},
+	volume={12},
+	number={4},
+	pages={453--476},
+	year={2008},
+	publisher={Wiley Online Library}
+}
+
+@misc{Grenell,
+	title={Stop voting for Democrats.},
+	author={Grenell, Richard},
+	year={2021},
+	url={https://twitter.com/richardgrenell/status/1471502835682480128?s=21}
+}
+
+@article{gal1995boundaries,
+	title={The boundaries of languages and disciplines: How ideologies construct difference},
+	author={Gal, Susan and Irvine, Judith T},
+	journal={Social research},
+	pages={967--1001},
+	year={1995},
+	publisher={JSTOR}
+}
+
+@inproceedings{bender2021dangers,
+	title={On the Dangers of Stochastic Parrots: Can Language Models Be Too Big?},
+	author={Bender, Emily M and Gebru, Timnit and McMillan-Major, Angelina and Shmitchell, Shmargaret},
+	booktitle={Proceedings of the 2021 ACM Conference on Fairness, Accountability, and Transparency},
+	pages={610--623},
+	year={2021}
+}
+
+@misc{sutton2018biased,
+	title={Biased Embeddings from Wild Data: Measuring, Understanding and Removing}, 
+	author={Adam Sutton and Thomas Lansdall-Welfare and Nello Cristianini},
+	year={2018},
+	eprint={1806.06301},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
+}
